test/depCond7.slq

def main(){
	x:=H(0:ğ”¹);
	y:=dup(x);
	z:=H(0:ğ”¹);
	if z{
		forget(y); // TODO: error
		x:=H(x);
	}else{
		forget(y); // error
		y:=H(y); // error
	}
	return (x,z);
}
